@@ -1,4 +1,3 @@
-Option button support
 Full support for multiple forms on a page
 Track the current form based on the location of the last manipulated input, use this as a default for clicks_button
 Make current_url work with redirections
