@@ -1,10 +1,16 @@
 require File.dirname(__FILE__) + "/helper"
 
+RAILS_ROOT = "." unless defined?(RAILS_ROOT)
+
 class VisitsTest < Test::Unit::TestCase
+
   def setup
     @session = ActionController::Integration::Session.new
     @session.stubs(:assert_response)
     @session.stubs(:get_via_redirect)
+    @response = mock
+    @session.stubs(:response).returns(@response)
+    @response.stubs(:body).returns("")
   end
 
   def test_should_use_get
